--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,25 @@
-<h1>Digital blood tests</h1>
+<div class="container">
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <div class="col-md-3 mb-2 mb-md-0">
+      <a href="/" class="nav-link px-2 link-secondary">Home</a>
+    </div>
 
+    <div class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <h1 class="text-center">Digital Blood Tests</h1>
+    </div>
 
-<%= link_to 'Login', new_session_path %>
+    <div class="col-md-3 text-end">
+      <%= link_to 'Login', new_session_path, class: "btn btn-outline-primary me-2" %>
+      <%= link_to 'Sign-up', new_session_path, class: "btn btn-primary" %>
+    </div>
+  </header>
 
+  <div class="row">
+    <div class="col-md-6">
+      <h3>What is this?</h3>
+      <p>This is a website that allows you to create and manage blood tests.</p>
+      <p> You can upload a tests, compare them, see how any value change over time.</p>
+    </div>
+  </div>
+
+</div>
