--- a/app/views/blood_checks/index.html.erb
+++ b/app/views/blood_checks/index.html.erb
@@ -10,6 +10,7 @@
 
 <div class="row" id="blood-checks-list">
   <div class="col-md-10 mx-auto">
+    <%= link_to 'Add new', new_blood_check_path, class: 'float-end btn btn-primary' %>
     <h3>Your blood tests</h3>
     <table class="table" id="blood-checks-table">
       <thead>
