--- a/app/views/blood_checks/new.html.erb
+++ b/app/views/blood_checks/new.html.erb
@@ -11,7 +11,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
         </div>
         <div class="toast-body">
-          Blood check has been created!
+          {{isNew ? "Blood check has been created!" : "Blood check has been updated!"}}
         </div>
       </div>
     </div>
@@ -49,7 +49,7 @@
       </div>
 
       <div class="actions mt-3">
-        <%= form.submit "Create Blood Check", class: "btn btn-primary" %>
+        <button type=submit class="btn btn-primary">{{isNew ? "Create Blood Check" : "Update Blood Check"}}</button>
       </div>
     <% end %>
   </div>
