--- a/app/views/blood_checks/new.html.erb
+++ b/app/views/blood_checks/new.html.erb
@@ -48,6 +48,39 @@
         </div>
       </div>
 
+      <table class="table" id="blood-checks-table" v-if="entries.length > 0">
+        <thead>
+        <tr>
+          <th scope="col">Name</th>
+          <th scope="col">Value</th>
+          <th scope="col">Unit</th>
+          <th scope="col">Reference</th>
+          <th scope="col"></th>
+        </tr>
+        </thead>
+        <tbody>
+          <tr v-for="entry in entries" :key="entry.identifier">
+            <td>
+              <input class="form-control" v-model="entry.name" required>
+            </td>
+            <td>
+              <input class="form-control" v-model="entry.value" required placeholder="0.1" type="number" step="0.01">
+            </td>
+            <td>
+              <input class="form-control" v-model="entry.unit" required>
+            </td>
+            <td>
+              <input class="form-control" v-model="entry.reference" required>
+            </td>
+            <td>
+              <button class="float-end btn btn-outline-primary" @click="deleteEntry(entry)">X</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <button class="float-end btn btn-outline-primary" @click="addEntry">Add entry</button>
+
       <div class="actions mt-3">
         <button type=submit class="btn btn-primary">{{isNew ? "Create Blood Check" : "Update Blood Check"}}</button>
       </div>
