--- a/app/views/blood_checks/new.html.erb
+++ b/app/views/blood_checks/new.html.erb
@@ -55,10 +55,11 @@
       <table class="table" id="blood-checks-table" v-if="entries.length > 0">
         <thead>
         <tr>
-          <th scope="col">Name</th>
+          <th scope="col" style="width: 30%;">Name</th>
           <th scope="col">Value</th>
           <th scope="col">Unit</th>
-          <th scope="col">Reference</th>
+          <th scope="col">Ref. Min</th>
+          <th scope="col">Ref. Max</th>
           <th scope="col"></th>
         </tr>
         </thead>
@@ -74,7 +75,10 @@
               <input class="form-control" v-model="entry.unit" required>
             </td>
             <td>
-              <input class="form-control" v-model="entry.reference" required>
+              <input class="form-control" v-model="entry.reference_lower" type="number" step="0.01">
+            </td>
+            <td>
+              <input class="form-control" v-model="entry.reference_upper" type="number" step="0.01">
             </td>
             <td>
               <button class="float-end btn btn-outline-primary" @click="deleteEntry(entry)">X</button>
